# ceo-platform

./: .dockerignore  .gitignore  ACTION_CHECKLIST.md  AGENTS.md  ClaudePlan.md  ClaudePlanV3.md  DEPLOYMENT_CHECKLIST.md  DOCKER_STAGING_DEPLOY.sh  DOCKER_TEST_ACCOUNTS.md  DailyProgress.md  Gem3Plan.md  GeniIprovePlan.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_LEGACY_FIXES.md  PHASE_4_STAGING_DEPLOYMENT.md  README.md  README_ANALYSIS.md  ReadMeTw.md  SETUP_GUIDE.md  SETUP_INSTRUCTIONS.md  TEST_API_ENDPOINTS.sh  WORK_COMPLETION_REPORT.md  claudePlanV2.md  opencode.jsonc  package-lock.json  package.json  plan.md  playwright.config.js  progress.md  pyproject.toml  supplier_api_fix_summary.md  test-phase10-1.js  test_api.py  test_fixed_supplier_api.js  test_supplier_api.js
.husky/: pre-commit
.opencode/: openwork.json
DB/: betterch_ceo.sql
HTML/: 01.css  _config.php  about.php  checklogin.php  contact.php  contact_save.php  error_log  forget_save.php  index.php  index2.php  log.php  logout.php  member.php  member_forget.php  member_inquiry.htm  member_inquiry.php  member_join.php  member_login.php  member_msg.php  member_msg2.php  member_order.php  member_order02.php  member_pas.htm  member_pas.php  member_rule.htm  member_save.php  member_write.php  member_write_bak.php  msg_save.php  msg_save2.php  order_save.php  pas_save.php  product.php  product_detail.php  product_detail_bak.php  product_hot.htm  product_search.htm  product_shop.php  range.css  shop_save.php  (+1 more)
ceo-monorepo/: .gitignore  CART_FLOW_TEST_REPORT.md  CART_UPDATE_SUMMARY.md  FINAL_MOBILE_API_INTEGRATION_REPORT.md  MOBILE_API_INTEGRATION_TEST_REPORT.md  ORDER_FIX_SUMMARY.md  ORDER_FLOW_TEST_REPORT.md  ORDER_TEST_SUMMARY.md  README.md  REFRESH_ENDPOINT_DOCUMENTATION.md  TIER_PROGRESS_SUMMARY.md  auth-flow-report.md  check-endpoints.sh  jest.config.js  jest.config.mobile.js  jest.config.mobile.simple.js  jest.setup.js  jest.setup.mobile.js  package.json  pnpm-lock.yaml  progress.md  test-apple-endpoint.sh  test-auth-api.sh  test-cart-flow.sh  test-complete-cart-flow.sh  test-complete-order-fix.sh  test-complete-refresh-flow.sh  test-get-jwt-token.js  test-google-oauth.sh  test-order-flow.sh  test-order-simple.sh  test-refresh-endpoint.js  test-session-token-as-bearer.sh  test_report.md  tsconfig.json  turbo.json
ceo-platform/: .env.example  .env.production.example  ADMIN_ORDERS_API_IMPLEMENTATION.md  CATEGORY_MANAGEMENT_IMPLEMENTATION.md  CHECKLIST.md  README.md  VERCEL_DEPLOYMENT.md  eslint.config.mjs  generate-secrets.sh  package.json  phase5-verification-report.txt  pnpm-lock.yaml  prisma.config.ts  test-admin-api.md  test-api-examples.http  tsconfig.tsbuildinfo  vercel.json
doc/: 02_Plan.md  04_Decision_Matrix.md  05_Next_Steps_Implementation.md  06_Phase6_Merge_Complete.md  09_Phase8_Security_Hardening.md  11_Production_Hardening.md  AGENT_ANALYSIS_SUMMARY.md  ClaudePlanV3.md  DailyProgress.md  Deployment_Guide.md  Gem3Plan.md  NEXT_STEPS.md  NextAuth_Fixes_Summary.md  PLAYWRIGHT_TEST_REPORT.md  README.md  README_ANALYSIS.md  progress.md
docs/: 01_Progress.md  03_ClaudePlan.md  07_Email_Verification_Completion.md  08_Deployment_and_Improvements.md  10_Sentry_Integration.md  12_API_Documentation.md  DEPENDENCY_FIX_SUMMARY.md  DEPLOYMENT_README.md  EXECUTION_CHECKLIST.md  PHASE6_EXECUTION_PLAN.md  PHASE_4_DEPLOYMENT_READINESS.md  PHASE_5_TESTING_PLAN.md  PROJECT_CONFIG_CHECKLIST.md  QUICK_START.md  README.md  SUPPLIER_SYSTEM_ENHANCEMENT_PLAN.md
pb_data/: data.db  (+1 more)
(+782 files in other folders)
